# kimi-k3-knowledge-ops

./: .gitignore  CONTRIBUTING.md  CREATEOS.md  Dockerfile  README.md  SECURITY.md  STATUS.md  createos.json  pyproject.toml  requirements-dlt.txt
.bootstrap/: materialize.py  payload.part0  payload.part0a  payload.part0a0  payload.part0a1  payload.part0a2  payload.part0a3  payload.part1  payload.part2  payload.part3  repair.py
.dlt/: config.toml  secrets.toml.example
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  research.yml
.github/workflows/: agent-platform.yml  autonomous-research.yml  bootstrap-platform.yml  dlt-ingestion.yml  research-update.yml
config/: project.json
feedback/: README.md
pipelines/: github_verified_pipeline.py
policies/: agent-policy.json
releases/: baseline.yml
schemas/: adapter.schema.json
scripts/: check_repository_quality.py  quality_gate.py  run_all_checks.py  security_gate.py
sources/: official.yml
src/knowledge_ops/: __init__.py  __main__.py  agents.py  github_client.py  models.py  orchestrator.py  policy.py  service.py
tests/: test_platform.py
