
[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-ops-agents"
version = "1.0.0"
description = "Review-gated autonomous GitHub discovery, analysis, and integration proposal agents"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
knowledge-ops = "knowledge_ops.__main__:main"
knowledge-ops-service = "knowledge_ops.service:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
